# Projet_8

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  main.py  mlflow.db  pyproject.toml  test_newrelic.py
.github/workflows/: ci-cd.yml
api/: api.py
gradio_app/: app.py
models/preprocessors/: feature_names.pkl  imputer.pkl  scaler.pkl
src/: data_prep.py  generate_drift_data.py  mlflow_call.py  mlflow_config.py  model_functions.py  predict_and_analyze_drift.py  run_xgb_classifier.py
tests/: test_api.py
