[project]
name = "projet-8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "mlflow>=3.13.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.52.0",
    "numpy>=2.4.4",
    "xgboost>=3.2.0",
    "gradio>=6.16.0",
    "pytest>=9.0.3",
    "huggingface-hub>=1.17.0",
    "dagshub>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
